[package]
name = "diamondfire-actiondump"
description = "A wrapper around the code action dump from DiamondFire."
authors = ["tk2217"]

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tk2217/df-actiondump-rs/"

version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }